fixed scrollbar on conversation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1053,20 +1053,20 @@ img {
 }
 
 /* Scrollbar styling */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 7px;
-}
+} */
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background: #888; 
-}
+} */
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+/* ::-webkit-scrollbar-thumb:hover {
   background: #555; 
   cursor: pointer;
-}
+} */
 
 @media only screen and (max-width: 1000px) {
   .admin-main__wrapper {
